force-app/main/default/objects/Endorsement__c/Endorsement__c.object-meta.xml
<CustomObject>
    <label>Master Endorsement</label>
    <nameField>
        <label>Endorsement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Endorsements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>