force-app/main/default/objects/Endorsement__c/fields/Endorsement_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Record_Type_ID__c</fullName>
    <label>Endorsement Record Type ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>