force-app/main/default/objects/Endorsement__c/fields/Endorsement_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Sub_Type__c</fullName>
    <label>Endorsement Number</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adjust Premium</fullName>
                <label>Adjust Premium Endorsement</label>
            </value>
            <value>
                <fullName>Change Lawyer</fullName>
                <label>Change Lawyer Endorsement</label>
            </value>
            <value>
                <fullName>IL 101A</fullName>
            </value>
            <value>
                <fullName>IL 101B</fullName>
            </value>
            <value>
                <fullName>IL 102</fullName>
            </value>
            <value>
                <fullName>IL 104</fullName>
            </value>
            <value>
                <fullName>IL 106</fullName>
            </value>
            <value>
                <fullName>IL 107</fullName>
            </value>
            <value>
                <fullName>IL 107B</fullName>
            </value>
            <value>
                <fullName>IL 107C</fullName>
            </value>
            <value>
                <fullName>IL 107D</fullName>
            </value>
            <value>
                <fullName>IL 110</fullName>
            </value>
            <value>
                <fullName>IL 115</fullName>
            </value>
            <value>
                <fullName>IL 120</fullName>
            </value>
            <value>
                <fullName>IL 130</fullName>
            </value>
            <value>
                <fullName>IL 150</fullName>
            </value>
            <value>
                <fullName>IL 151</fullName>
            </value>
            <value>
                <fullName>IL 151A</fullName>
            </value>
            <value>
                <fullName>IL 152</fullName>
            </value>
            <value>
                <fullName>IL 153</fullName>
            </value>
            <value>
                <fullName>IL 160</fullName>
            </value>
            <value>
                <fullName>IL 161</fullName>
            </value>
            <value>
                <fullName>IL 162</fullName>
            </value>
            <value>
                <fullName>IL 163</fullName>
            </value>
            <value>
                <fullName>IL 166</fullName>
            </value>
            <value>
                <fullName>IL 167</fullName>
            </value>
            <value>
                <fullName>IL 168</fullName>
            </value>
            <value>
                <fullName>IL 169</fullName>
            </value>
            <value>
                <fullName>IL 169A</fullName>
            </value>
            <value>
                <fullName>IL 171</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>