force-app/main/default/objects/Endorsement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Description__c</columns>
    <columns>Endorsement_Sub_Type__c</columns>
    <columns>Endorsement_Record_Type_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>